# Auto_Pipeline

./: .code-chunks.json  .coveragerc  .dockerignore  .env.example  .env.sample  .env.template  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .ruff.toml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  HIGH_AVAILABILITY_STRATEGY.md  LICENSE  Makefile  README.md  SECURITY.md  STUBS.md  TODO.md  ab_test_generator.py  ab_test_worker.py  ab_variant_manager.py  advance_repo.py  ai_debugging.py  ai_optimization.py  analytics_worker.py  app.py  auth_utils.py  auto-pipeline.service  auto_insight.py  auto_optimize.py  auto_rewriter.py  automation_dashboard.py  automation_report.py  aws_cost_monitor.py  batch_log.py  billing_utils.py  (+132 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
Codex_Full_Automation_Module_v1.1/: .env.sample  README.md  ops_log_model.py  slack_alert.py
Codex_Full_Automation_Module_v1.2/: README.md  batch_log.py  deploy_pipeline.py  log_ops.py  sla_monitor.py
Codex_Master_Automation_Module_v2.0/: .env.sample  README.md
Codex_Master_Automation_Module_v2_0/: pipeline_orchestrator.py
ai_self_heal/: drift_controller.py  failure_replay.py  rca_engine.py
aiops/: cost_guard.py  self_heal_monitor.py
analytics/: kpi_feedback.py
api/: main.py
argo/: api-app.yaml  metric_template.yml
auth/: jwt_auth.py
automation/: content_generation.py  data_hub.py  deployment.py  orchestration.py  run_pipeline.py
autopipe/: __init__.py  cache.py  log_conf.py  models.py  opsgenie.py  retry.py  schema_check.py  sentry_init.py  tracing.py  utils.py
badges/: time.json
base_saas/: README.md  auto_compile.py
benchmarks/: async_benchmark.md
billing/: metering.py  stripe_hooks.py
blog_automation/: competitive_analysis.py  content_generator.py  legal_compliance.py  main.py  performance_analysis.py  quality_assurance.py  quality_checker.py  seo_adaptor.py  seo_optimization.py  system_resilience.py  trend_intelligence.py
ceo_kernel/: __init__.py  cashflow_planner.py  competitor_analyzer.py  investor_deck_writer.py  market_scanner.py  pricing_optimizer.py  saas_cloner.py
ci/: codex_cleanup.yml
cloud/: iam-role.yml  security-group.yml
codex/: pyproject.toml  requirements-dev.txt  requirements.txt
codex/.github/workflows/: podcast-ci.yml
codex/src/podcast/: __init__.py  audio.py  feed.py  metadata.py
codex/tests/test_podcast/: test_audio.py  test_feed.py  test_metadata.py
commands/: vcheck.py  vinfo.py  vstart.py
common/: env.py
config/: banned_keywords.txt  banned_words.txt  channel_specs.json  content_policies.json  cpc.json  logstash.conf  pipeline.yaml  prometheus.yml  topic_channels.json
conglomerate/: deployer.py  legal_engine.py  opportunity_map.py  portfolio_controller.py  tax_optimizer.py
connectors/: snowflake-sink.json
core/: __init__.py  feature_flag.py  ops_log_model.py
dashboard/: app.py
data/: channel_roi_ranking.json  generated_hooks.json  platform_metrics.json
datadog/: dashboard_pipeline.json  monitors.json
docs/: CONTRIBUTING.md  Makefile  README.md  SUSTAINABLE_CONTENT_STRATEGY.md  cloud_deployment.md  conf.py  index.rst  make_scenario_outline.md  scalability_ha.md  setup.md  technical_documentation.json  usage.md  v-infinity-agent-prompts.md
edge/: edge_log.sql  feast_fetch.js  feast_worker.js  geo_llm_cache.js  kv_exporter.js  kv_to_r2.js  llm_gatekeeper.js  log_ab_result.js  prometheus_rules.yml
feature_store/: cleanup.py  docker-compose.feast.yml  edge_server.go  edge_server.wat
feedback/: api_feedback.py
grafana/: bandit_panel.sql
infra/: canary_router.py  dynamo_multi_az.tf  gpu_allocator.py  lambda_warm.tf  migrate_state.sh  render.tf  variables.tf
k8s/: elk-stack.yaml  gpu_quota.yml  grafana.yml  hpa-api.yaml  kubecost.yml  prometheus.yml  rollout.yml  spot-instance-deployment.yml
kernel/: auto_api.py  saas_compiler.py
kubecost/: values.yaml
launcher/: saas_launcher.py
linting/: precommit_setup.sh
llm_monitor/: guardrail_schema.yml  phoenix_alert.py  phoenix_init.py  phoenix_rules.yaml  phoenix_sampling.py
llm_router/: cost_router.py
meta_kernel/: __init__.py  business_composer.py  growth_evaluator.py  problem_miner.py  solution_designer.py  spec_generator.py  venture_launcher.py
middleware/: auth_middleware.py
ml/: bandit_optimizer.py  rlhf_train.py  run_sweep.py  sweep.yaml  wandb_schedule.py
models/: albert_model.py  distilgpt.py  tenant.py
modules/: __init__.py  content_writer.py  create_content.py  editor_seo_optimizer.py  generate_keywords.py  hook_uploader.py  keyword_generator.py  notion_sync.py  osmu_caption_generator.py  osmu_content_slicer.py  osmu_dispatcher.py  osmu_format_mapper.py  qa_filter.py  seo_optimizer.py  slack_notifier.py
monitoring/: resource_monitor.py
network/: pypi_allowlist_check.py
otel/: init_tracer.py
pe_kernel/: __init__.py  acquisition_planner.py  portfolio_optimizer.py  post_merge_cloner.py  risk_scanner.py  target_scanner.py  valuator.py
performance/: logging_optimization.py
privacy/: privacy_manager.py
project_vinfinity_production_bundle_v1.0/: .env.sample  Dockerfile  cli.py  content_writer.py  dashboard.py  docker-compose.yml  editor_seo_optimizer.py  hook_uploader.py  init_supabase.py  keyword_generator.py  notion_sync.py  pipeline_flow.md  pipeline_orchestrator.py  qa_filter.py  requirements.txt  (+3 more)
(+388 files in other folders)
