[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codex"
version = "0.1.0"
description = "Automated Pipeline Tools"
requires-python = ">=3.11"
authors = [
    {name = "sunwoopark0512", email = "sunwoopark0512@example.com"},
]
dependencies = [
    "requests>=2.31.0",
    "python-dateutil>=2.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "pylint>=2.17.0",
    "mypy>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = """
    -v
    --cov=src
    --cov-report=term
    --cov-report=xml:tests/coverage_reports/coverage.xml
    --junitxml=tests/test_results/junit.xml
"""

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "pass"
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "C0330",  # wrong-hanging-indentation
]
