[metadata]
name = your-project-name
version = 0.1.0
description = Your project description
author = sunwoopark0512

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
install_requires =
    # 의존성을 여기에 추가하세요

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=7.0.0
    pytest-cov>=4.0.0
    mypy>=1.0.0
    pylint>=2.17.0
    types-setuptools

[pylint]
max-line-length = 100
disable = C0111,C0103
