[metadata]
name = docgen
version = 0.1.0
description = Docstring Generator Utility
long_description = file: README.md
author = sunwoopark0512

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
install_requires =

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
python_files = test_*.py
addopts = -v --cov=src --cov-report=xml

[coverage:run]
source = src
omit = tests/*

[pydocstyle]
inherit = false
convention = google
add-ignore = D203, D213
match = .*\.py
